--- a/src/pages/Popup/index.html
+++ b/src/pages/Popup/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title></title>
-  </head>
+<html lang="en" style="font-size: 16px;">
 
-  <body>
-    <div id="app-container"></div>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <title></title>
+</head>
+
+<body>
+  <div id="app-container"></div>
+</body>
+
 </html>
